<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_wechat_logo"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share_wechat" />

        <TextView
            android:id="@+id/tv_moments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_moments_logo"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share_moments"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_qq_logo"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share_qq" />

        <TextView
            android:id="@+id/tv_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_download"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/share_save_picture" />
    </LinearLayout>

    <View style="@style/Divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/blue_circle_shape" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="@string/share_explain_save_img"
            android:textColor="#FF9F9F9F"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/color_common_text33"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>