<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_wechat"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="12sp"
            android:textColor="@color/color_common_text99"
            android:text="@string/share_wechat" />

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_qq"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textColor="@color/color_common_text99"
            android:padding="10dp"
            android:text="@string/share_qq" />

        <TextView
            android:id="@+id/tv_telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icon_telegram"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="12sp"
            android:textColor="@color/color_common_text99"
            android:text="@string/share_relegram" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="@color/color_common_text99"
        android:textSize="16sp" />

</LinearLayout>