<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="23dp"
        android:text="@string/please_input_pay_password"
        android:textColor="@color/cl_242424"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        android:paddingTop="30dp"
        android:paddingBottom="5dp"
        android:background="@null"
        android:inputType="textPassword"
        android:textColor="@color/color_common_text33"
        android:textSize="15sp"
        android:theme="@style/UnderlineEditTextStyle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="7dp"
            android:layout_gravity="left|bottom"
            android:background="@color/theme" />

        <View
            android:layout_width="1dp"
            android:layout_height="7dp"
            android:layout_gravity="right|bottom"
            android:background="@color/theme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/theme" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textColor="@color/cl_9f9f9f"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/confirm"
            android:textColor="@color/cl_4a9eff"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>